# FreeCAD-APLAN

./: CMakeLists.txt  Init.py  InitGui.py  ObjectsAplan.py  README.md  setup.py
App/: AplanAnalysis.cpp  AplanAnalysis.hpp  AplanAnalysisPy.xml  AplanAnalysisPyImp.cpp  AplanCompound.cpp  AplanCompound.hpp  AplanCompoundGroup.cpp  AplanCompoundGroup.hpp  AplanCompoundGroupPy.xml  AplanCompoundGroupPyImp.cpp  AplanConnectionDetector.cpp  AplanConnectionDetector.hpp  AplanConstraintGroup.cpp  AplanConstraintGroup.hpp  AplanConstraintGroupPy.xml  AplanConstraintGroupPyImp.cpp  AplanGeomConstraints.cpp  AplanGeomConstraints.hpp  AplanObstructionDetector.cpp  AplanObstructionDetector.hpp  AplanPartFilter.cpp  AplanPartFilter.hpp  AplanTools.cpp  AplanTools.hpp  AplanTopoConstraints.cpp  AplanTopoConstraints.hpp  AppAplan.cpp  AppAplanPy.cpp  CMakeLists.txt  PreCompiled.hpp
Gui/: ActiveAnalysisObserver.cpp  ActiveAnalysisObserver.hpp  AppAplanGui.cpp  AppAplanGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.cpp  PreCompiled.hpp  TaskAplanAnalysis.cpp  TaskAplanAnalysis.hpp  TaskAplanAnalysis.ui  ViewProviderAnalysis.cpp  ViewProviderAnalysis.hpp  ViewProviderCompound.cpp  ViewProviderCompound.hpp  ViewProviderCompoundGroup.cpp  ViewProviderCompoundGroup.hpp  ViewProviderConnectionDetector.cpp  ViewProviderConnectionDetector.hpp  ViewProviderConstraintGroup.cpp  ViewProviderConstraintGroup.hpp  ViewProviderGeomConstraints.cpp  ViewProviderGeomConstraints.hpp  ViewProviderObstructionDetector.cpp  ViewProviderObstructionDetector.hpp  ViewProviderPartFilter.cpp  ViewProviderPartFilter.hpp  ViewProviderTopoConstraints.cpp  ViewProviderTopoConstraints.hpp  Workbench.cpp  Workbench.hpp
Gui/Resources/: Aplan.qrc
Gui/Resources/ui/: ExcludeParts.ui  GeomConstraints.ui  GroupParts.ui  TopoConstraints.ui
Gui/Resources/ui/aplan_connection_detectors/: SwellOCCT.ui
Gui/Resources/ui/aplan_obstruction_detectors/: OCCT.ui
aplancommands/: commands.py  manager.py
aplanobjects/: base_aplanpythonobject.py  compound.py  geom_constraints.py  graphs.py  part_filter.py  topo_constraints.py
aplansolvers/aplan_aog_generators/: base_aog_generator.py  reverse_cutset.py
aplansolvers/aplan_connection_detectors/: base_connection_detector.py  swell_occt.py
aplansolvers/aplan_obstruction_detectors/: base_obstruction_detector.py  base_view_obstruction_detector.py  occt.py  occt_multiproc.py  occt_view.py
aplantaskpanels/: task_geom_constraints.py  task_part_filter.py  task_topo_constraints.py
aplantools/: aplanutils.py
aplanviewprovider/: view_compound.py  view_geom_constraints.py  view_part_filter.py  view_topo_constraints.py
aplanwebapp/: api.py  browser.py  server.py
aplanwebapp/static/css/: error.css  style.css
aplanwebapp/static/js/: connection_graph.js  error.js  obstruction_graph.js
aplanwebapp/static/json/: config_params.json
aplanwebapp/templates/: connection_graph.html  error_404.html  error_500.html  obstruction_graph.html
freecad/aplan_workbench/: __init__.py  assembly.py  commands.py  graphs.py  init_gui.py
